@@ -217,7 +217,8 @@ Version 1.3-svn:
    * better handling of SDL_ListModes return code (no user impact)
    * first turn of a game is saved again (fixes bug #7909 and bug #8117)
    * reduce CPU usage by removing calls to SDL_GetTicks for idle animations
-   * changed network thread management to be more scalable
+   * changed network thread management to be more scalable, both with an upper
+   and lower number of threads
    * enabled python as default, to disable it use --disable-python
    * various code cleanups
 
